# GammaSensitivity

./: CMakeLists.txt  README.md  set_env.sh
FitLib/FitLib/: BinInputs.hpp  Fitter.hpp  Likelihood.hpp  Log.hpp  Settings.hpp
FitLib/src/: BinInputs.cpp  Fitter.cpp  Likelihood.cpp
configs/: default.txt
inputs/kspipi/: measured_Fi.txt  measured_ci_si.txt
main/: ggsz_fit.cpp
